--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.9.12",
 		"@material-ui/icons": "^4.9.1",
+		"@material-ui/lab": "^4.0.0-alpha.51",
 		"express": "^4.16.3",
 		"if-env": "^1.0.4"
 	}
