--- a/package.json
+++ b/package.json
@@ -20,7 +20,17 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "if-env": "^1.0.4"
-  }
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.9.11"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/armandojhc/project-3.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/armandojhc/project-3/issues"
+  },
+  "homepage": "https://github.com/armandojhc/project-3#readme"
 }
