--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "^4.0.0-alpha.51",
 		"express": "^4.16.3",
+		"if-env": "^1.0.4",
 		"mongoose": "^5.9.11",
-		"if-env": "^1.0.4"
+		"react-router-dom": "^5.1.2"
 	}
 }
