--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
 		"bcryptjs": "^2.4.3",
 		"express": "^4.16.3",
 		"if-env": "^1.0.4",
+		"moment": "^2.25.3",
+		"moment-timezone": "^0.5.28",
 		"mongoose": "^5.9.11",
 		"passport": "^0.4.1",
+		"react-moment": "^0.9.7",
 		"react-router-dom": "^5.1.2"
 	}
 }
