--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.9.12",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-particles-js": "^3.2.1",
     "react-scripts": "^3.4.1"
   },
   "scripts": {
