--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"mongoose": "^5.9.11",
 		"passport": "^0.4.1",
 		"react-moment": "^0.9.7",
-		"react-router-dom": "^5.1.2"
+		"react-router-dom": "^5.1.2",
+		"react-webcam": "^5.0.1"
 	}
 }
