--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "^4.0.0-alpha.51",
 		"bcryptjs": "^2.4.3",
+		"create-object-url": "^1.0.2",
 		"express": "^4.16.3",
 		"if-env": "^1.0.4",
 		"moment": "^2.25.3",
 		"moment-timezone": "^0.5.28",
 		"mongoose": "^5.9.11",
 		"passport": "^0.4.1",
+		"react-livestream": "^1.0.11",
 		"react-moment": "^0.9.7",
 		"react-router-dom": "^5.1.2",
-		"react-webcam": "^5.0.1"
+		"react-webcam": "^5.0.1",
+		"recordrtc": "^5.5.9",
+		"video-react": "^0.14.1"
 	}
 }
