--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "moment-timezone": "^0.5.28",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-livestream": "^1.0.11",
     "react-moment": "^0.9.7",
     "react-scripts": "^3.4.1"
   },
